--- a/Bulb-On-Off/Basic.html
+++ b/Bulb-On-Off/Basic.html
@@ -8,10 +8,15 @@
     <title>Bulb On Off</title>
 </head>
 <body>
-    <div id="center">
-        <div id="bulb" class="bulb-off"></div>
-    </div>
-    
+    <div id="center">       
+        <div id="bulb" class="bulb-off"></div>        
+    </div>        
+
+    <!-- <div id="center">  
+        <img id="img" src="Image/lightoff.png">
+        <button onclick='myFunction()'>On</button>                
+    </div>     -->
+
     <script src="JS/script.js"></script>
 </body>
 </html>
